--- a/Task1/Task1.ipynb
+++ b/Task1/Task1.ipynb
@@ -28,7 +28,7 @@
     "\\frac{\\partial y}{\\partial x_1}, \\frac{\\partial y}{\\partial x_2}, \n",
     "$$\n",
     "\n",
-    "Для этого в файле `dev.json` приведены значения $\\frac{\\partial p}{\\partial g_1}, \\frac{\\partial p}{\\partial g_2}$, вычисленные при известных значениях входа. \n",
+    "Для этого в файле `dev.json` приведены значения $\\frac{\\partial p}{\\partial g_1}, \\frac{\\partial p}{\\partial g_2}$ (обозначены как `dpdg1, dpdg2`), вычисленные при известных значениях входа. \n",
     "\n",
     "Нужно:\n",
     "\n",
