Spelling errors fixed

--- a/Task1/Task1.ipynb
+++ b/Task1/Task1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В некоторой архитектура нейронной сети зависимость выхода $y \\in \\mathbb{R}$ от входа $(x_1, x_2) \\in \\mathbb{R}^2$ можно записать следующим образом:\n",
+    "В некоторой архитектуре нейронной сети зависимость выхода $y \\in \\mathbb{R}$ от входа $(x_1, x_2) \\in \\mathbb{R}^2$ можно записать следующим образом:\n",
     "$$\n",
     "\\begin{align*}\n",
     "&f_1(x_1, x_2) = x_1 + x_2,\\\\\n",
