--- a/Task2/Task2.ipynb
+++ b/Task2/Task2.ipynb
@@ -33,9 +33,9 @@
     "5 uv_sphere\n",
     "```\n",
     "\n",
-    "Какие средства можно применить, чтобы ускорить работу модели?\n",
+    "Какие средства можно применить, чтобы ускорить работу модели (этапы обучения или предсказания)? \n",
     "\n",
-    "Подойдут любые способы. Например, использовать [TensorRT](https://developer.nvidia.com/tensorrt)\n",
+    "Один из вариантов ответов может быть следующим: использовать [TensorRT](https://developer.nvidia.com/tensorrt).\n",
     "\n",
     "Задачу можно решать в [Google Colab](https://colab.research.google.com/), если нет возможности использовать GPU."
    ]
