Update task descriptions

--- a/Task1/Task1.ipynb
+++ b/Task1/Task1.ipynb
@@ -21,9 +21,9 @@
     "&y(x_1, x_2) = p(g_1(x_1,x_2), g_2(x_1, x_2)),\n",
     "\\end{align*}\n",
     "$$\n",
-    "где $p(g_1, g_2)-$ некоторая неизветсна функция.\n",
+    "где $p(g_1, g_2)-$ некоторая неизвестная функция.\n",
     "\n",
-    "С помощью [механизма автоматическоого дифференцирования в PyTorch](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#) необходимо вычислить значения частных производных в разных точках:\n",
+    "С помощью [механизма автоматического дифференцирования в PyTorch](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#) необходимо вычислить значения частных производных в разных точках:\n",
     "$$\n",
     "\\frac{\\partial y}{\\partial x_1}, \\frac{\\partial y}{\\partial x_2}, \n",
     "$$\n",
@@ -33,21 +33,16 @@
     "Нужно:\n",
     "\n",
     "1. Загрузить данные из файла `dev.json`\n",
-    "2. Посчитать значения нужных производных дял каждой точки.\n",
+    "2. Посчитать значения нужных производных для каждой точки.\n",
     "3. Сохранить результат в формате CSV. Файл должен иметь следующую структуру:\n",
     "```\n",
     "id,dx1,dx2\n",
     "....\n",
     "```\n",
-    "`id` - это значение `id` из `dev.json`, `dx1, dx2`- значение производных, вычисленные в точке `id` из `dev.json.`"
+    "`id` - это значение `id` из `dev.json`, `dx1, dx2`- значение производных, вычисленные в точке `id` из `dev.json.`\n",
+    "\n",
+    "Ответ проверяется с помощью функции [math.isclose](https://docs.python.org/3/library/math.html#math.isclose) с точностью до `1e-8`. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
