--- a/Task3/Task3.ipynb
+++ b/Task3/Task3.ipynb
@@ -11,13 +11,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[В файле scene.ply](https://drive.google.com/file/d/11jscr5IjuwtFUUcvufwLKReHhrClmXlx/view?usp=sharing) хранится сцена с объектами из второго задания. \n",
+    "[Дан набор 3D примитивов](https://drive.google.com/file/d/1xM5diKjMbp_PfNu--JG2A-ZeFk9TLkks/view?usp=sharing). Необходимо решить задачу классификации объектов с помощью нейронной сети, представленных в форме облака точек.\n",
     "\n",
-    "Необходимо выделить отдельные объекты на этой сцене и используя модель из предыдущего шага выполнить их классификацию.\n",
-    "В результате должна быть новая сцена с раскрашенными объектами в зависимости от класса. Цвета могут быть любыми, кроме чёрного. Плоские объекты (\"стена\" и \"пол\") на сцене считаются лишними и не представляют интереса.\n",
+    "Набор данных разбит на три части: `train`, `test`, `valid`.\n",
     "\n",
-    "В результате нужно подготовить файл в формате .ply, где точки раскрашены цветом в зависимости от принадлежности к какому-то классу. Остальные точки должны иметь чёрный цвет."
+    "Для этого нужно:\n",
+    "\n",
+    "1. Используя набор данных из категории `train` обучить модель классификации.\n",
+    "2. Оценить качество её работы на объектах из категории `test`. Для этого воспользоваться [classification_report из scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html?highlight=report#sklearn.metrics.classification_report). Провести финальную оценку на `valid`. Написать краткий отчёт по результатам оценки качества модели: насколько хорошо/плохо работает модель, насколько она обобщается на данные из `valid` набора, что можно сделать для улучшения результатов.\n",
+    "\n",
+    "\n",
+    "Задачу можно решать в [Google Colab](https://colab.research.google.com/), если нет возможности использовать GPU."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
