--- a/Task4/Task4.ipynb
+++ b/Task4/Task4.ipynb
@@ -29,8 +29,23 @@
     "\n",
     "Если ваше приложение будет состоять из нескольких частей, то можно использовать [Docker Compose](https://github.com/docker/compose) для запуска.\n",
     "\n",
-    "Предполагается, что все расчёты будут происходить на CPU. При необходимости у нас есть возможность запустить контейнер с поддержкой GPU в [nvidia-docker](https://github.com/NVIDIA/nvidia-docker)."
+    "Предполагается, что все расчёты будут происходить на CPU. При необходимости у нас есть возможность запустить контейнер с поддержкой GPU в [nvidia-docker](https://github.com/NVIDIA/nvidia-docker).\n",
+    "\n",
+    "**Дополнительное задание**\n",
+    "\n",
+    "Будет плюсом если вы его сделаете.\n",
+    "\n",
+    "Используя любые системы CI/CD, например [GitHub Actions](https://github.com/features/actions), напишите процесс автоматической сборки и публикации вашего образа в [Docker Hub]. В качестве решения отправьте ссылку на публичный репозиторий в Docker Hub.\n",
+    "\n",
+    "Автомаическая сборка должна происходить при каждом pull request. Публикация образа только при слиянии в `develop` или `master`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
