--- a/Task1/Task1.ipynb
+++ b/Task1/Task1.ipynb
@@ -43,13 +43,84 @@
     "\n",
     "Ответ проверяется с помощью функции [math.isclose](https://docs.python.org/3/library/math.html#math.isclose) с точностью до `1e-8`. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# Решение\n",
+    "$\n",
+    "\\begin{align*}&\n",
+    "\\frac{\\partial y}{\\partial x_i} = \\sum_{j=1}^{2} \\frac{\\partial p}{\\partial g_j}\n",
+    "(\\sum_{k=1}^{2} \\frac{\\partial g_j}{\\partial f_k} \\frac{\\partial f_k}{\\partial x_i}),\n",
+    "\\space \\forall i \\in \\lbrace 1, 2 \\rbrace.\\\\&\n",
+    "\\frac{\\partial f_1}{\\partial x_1} = \\frac{\\partial f_1}{\\partial x_2} = 1,\\\\&\n",
+    "\\frac{\\partial f_2}{\\partial x_1} = x_2, \\frac{\\partial f_2}{\\partial x_2} = x_1,\\\\&\n",
+    "\\frac{\\partial g_1}{\\partial f_1} = \\frac{\\partial g_1}{\\partial f_2} = \\frac{1}{cos^2(f_1 + f_2 + 100)},\\\\&\n",
+    "\\frac{\\partial g_2}{\\partial f_1} = f_2, \\frac{\\partial g_2}{\\partial f_2} = f_1,\\\\&\n",
+    "\\frac{\\partial y}{\\partial x_1} =\n",
+    "\\frac{\\partial p}{\\partial g_1} \\frac{1+x_2}{cos^2(f_1 + f_2 + 100)} +\n",
+    "\\frac{\\partial p}{\\partial g_2} (f_2 + f_1 x_2),\\\\&\n",
+    "\\frac{\\partial y}{\\partial x_2} =\n",
+    "\\frac{\\partial p}{\\partial g_1} \\frac{1+x_1}{cos^2(f_1 + f_2 + 100)} +\n",
+    "\\frac{\\partial p}{\\partial g_2} (f_2 + f_1 x_1).\n",
+    "\\end{align*}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO гарантировать полную установку (conda / requirements.txt / !pip install / dockerfile)\n",
+    "import pandas as pd\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_path = \"dev.json\"\n",
+    "data_frame = pd.read_json(json_path)\n",
+    "data_torch = {var: torch.tensor(data_frame[var], requires_grad=True) \n",
+    "              for var in data_frame.keys()[1:]}\n",
+    "\n",
+    "\n",
+    "def f1(x1, x2):\n",
+    "    return x1 + x2\n",
+    "\n",
+    "\n",
+    "def f2(x1, x2):\n",
+    "    return x1 * x2\n",
+    "\n",
+    "\n",
+    "def dg1df(x1, x2):\n",
+    "    return torch.cos(f1(x1, x2) + f2(x1, x2) + 100) ** -2\n",
+    "\n",
+    "\n",
+    "def dgdx1(x1, x2, dpdg1, dpdg2):\n",
+    "    return dpdg1 * (1 + x2) / dg1df(x1, x2) + dpdg2 * (f2 + f1 * x2)\n",
+    "\n",
+    "\n",
+    "def dgdx2(x1, x2, dpdg1, dpdg2):\n",
+    "    return dpdg1 * (1 + x1) / dg1df(x1, x2) + dpdg2 * (f2 + f1 * x2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:3dml-hr]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-3dml-hr-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -61,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
