--- a/Task1/Task1.ipynb
+++ b/Task1/Task1.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO гарантировать полную установку (conda / requirements.txt / !pip install / dockerfile)\n",
+    "import math\n",
     "import pandas as pd\n",
     "import torch"
    ]
@@ -89,12 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_path = \"dev.json\"\n",
-    "data_frame = pd.read_json(json_path)\n",
-    "data_torch = {var: torch.tensor(data_frame[var], requires_grad=True) \n",
-    "              for var in data_frame.keys()[1:]}\n",
-    "\n",
-    "\n",
     "def f1(x1, x2):\n",
     "    return x1 + x2\n",
     "\n",
@@ -107,12 +101,48 @@
     "    return torch.cos(f1(x1, x2) + f2(x1, x2) + 100) ** -2\n",
     "\n",
     "\n",
-    "def dgdx1(x1, x2, dpdg1, dpdg2):\n",
-    "    return dpdg1 * (1 + x2) / dg1df(x1, x2) + dpdg2 * (f2 + f1 * x2)\n",
+    "def dydx1(x1, x2, dpdg1, dpdg2):\n",
+    "    return dpdg1 * (1 + x2) * dg1df(x1, x2) + dpdg2 * (f2(x1, x2) + f1(x1, x2) * x2)\n",
     "\n",
     "\n",
-    "def dgdx2(x1, x2, dpdg1, dpdg2):\n",
-    "    return dpdg1 * (1 + x1) / dg1df(x1, x2) + dpdg2 * (f2 + f1 * x2)"
+    "def dydx2(x1, x2, dpdg1, dpdg2):\n",
+    "    return dpdg1 * (1 + x1) * dg1df(x1, x2) + dpdg2 * (f2(x1, x2) + f1(x1, x2) * x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gradients in default dtype (float32) is too approximate\n",
+    "torch.set_default_dtype(torch.float64)\n",
+    "\n",
+    "json_path = 'dev.json'\n",
+    "data_frame = pd.read_json(json_path)\n",
+    "\n",
+    "x1, x2, dpdg1, dpdg2 = [torch.tensor(data_frame[i], requires_grad=True)\n",
+    "                        for i in ('x1', 'x2', 'dpdg1', 'dpdg2')]\n",
+    "\n",
+    "g1 = torch.tan(x1 + x2 + x1 * x2 + 100)\n",
+    "g2 = (x1 + x2) * x1 * x2\n",
+    "g = torch.stack([g1, g2])\n",
+    "g.backward(gradient=torch.stack([dpdg1, dpdg2]))\n",
+    "\n",
+    "# gradients provided by Torch\n",
+    "tx1, tx2 = x1.grad, x2.grad\n",
+    "# gradients provided analytically\n",
+    "ax1, ax2 = dydx1(x1, x2, dpdg1, dpdg2), dydx2(x1, x2, dpdg1, dpdg2)\n",
+    "\n",
+    "ids = range(len(x1))\n",
+    "\n",
+    "match = [math.isclose(tx1[i], ax1[i], rel_tol=1e-8) and\n",
+    "         math.isclose(tx2[i], ax2[i], rel_tol=1e-8) for i in ids]\n",
+    "assert not False in match, \"Gradient mismatch!\"\n",
+    "\n",
+    "csv_path = 'dev.csv'\n",
+    "grads = pd.DataFrame({'id': [i + 1 for i in ids], 'dx1': tx1.numpy(), 'dx2': tx2.numpy()})\n",
+    "grads.to_csv(csv_path, index=False)"
    ]
   }
  ],
@@ -132,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
