--- a/Task2/Task2.ipynb
+++ b/Task2/Task2.ipynb
@@ -1,30 +1,15 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Описание задачи\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Дана матрица A:\n",
     "$$\n",
@@ -36,9 +21,201 @@
     "$$\n",
     "\n",
     "Необходимо найти $ A^n, $ где $ n \\in \\mathbb{N} $"
-   ],
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Решение\n",
+    "Можем найти [ЖНФ](https://en.wikipedia.org/wiki/Jordan_normal_form), чтобы снизить число ненулевых множителей, таким образом уменьшив число операций для больших $n$.\n",
+    "$$\n",
+    "A^n = C J^n C^{-1}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.157706201000025\n",
+      "2.832353502999979\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy\n",
+    "import time\n",
+    "A = sympy.Matrix([(1,0,0),(1,1,0),(0,-1,1000)])\n",
+    "C, J = A.jordan_form()\n",
+    "zeros = sympy.zeros(3)\n",
+    "start = time.process_time()\n",
+    "x = [C*J**i*C**(-1) for i in range(1,1000)]\n",
+    "jtime = time.process_time() - start\n",
+    "print(jtime)\n",
+    "x = [A ** i for i in range(1,1000)]\n",
+    "print(time.process_time() - jtime - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Можем просто посмотреть на получившийся $А$ и поискать закономерности:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Matrix([\n",
+      "[1,  0,    0],\n",
+      "[1,  1,    0],\n",
+      "[0, -1, 1000]]), Matrix([\n",
+      "[ 1,     0,       0],\n",
+      "[ 2,     1,       0],\n",
+      "[-1, -1001, 1000000]]), Matrix([\n",
+      "[    1,        0,          0],\n",
+      "[    3,        1,          0],\n",
+      "[-1002, -1001001, 1000000000]]), Matrix([\n",
+      "[       1,           0,             0],\n",
+      "[       4,           1,             0],\n",
+      "[-1002003, -1001001001, 1000000000000]]), Matrix([\n",
+      "[          1,              0,                0],\n",
+      "[          5,              1,                0],\n",
+      "[-1002003004, -1001001001001, 1000000000000000]]), Matrix([\n",
+      "[             1,                 0,                   0],\n",
+      "[             6,                 1,                   0],\n",
+      "[-1002003004005, -1001001001001001, 1000000000000000000]]), Matrix([\n",
+      "[                1,                    0,                      0],\n",
+      "[                7,                    1,                      0],\n",
+      "[-1002003004005006, -1001001001001001001, 1000000000000000000000]]), Matrix([\n",
+      "[                   1,                       0,                         0],\n",
+      "[                   8,                       1,                         0],\n",
+      "[-1002003004005006007, -1001001001001001001001, 1000000000000000000000000]]), Matrix([\n",
+      "[                      1,                          0,                            0],\n",
+      "[                      9,                          1,                            0],\n",
+      "[-1002003004005006007008, -1001001001001001001001001, 1000000000000000000000000000]]), Matrix([\n",
+      "[                         1,                             0,                               0],\n",
+      "[                        10,                             1,                               0],\n",
+      "[-1002003004005006007008009, -1001001001001001001001001001, 1000000000000000000000000000000]]), Matrix([\n",
+      "[                            1,                                0,                                  0],\n",
+      "[                           11,                                1,                                  0],\n",
+      "[-1002003004005006007008009010, -1001001001001001001001001001001, 1000000000000000000000000000000000]]), Matrix([\n",
+      "[                               1,                                   0,                                     0],\n",
+      "[                              12,                                   1,                                     0],\n",
+      "[-1002003004005006007008009010011, -1001001001001001001001001001001001, 1000000000000000000000000000000000000]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[:12])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обнаружить здесь закономерность несложно, но для первых двух элементов последней строки лаконично (без суммирования от 1 до $n$) записать не получится. Посмотрим, как выглядит $J$ и как можно сократить запись с его помощью:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Matrix([\n",
+      "[1, 1,    0],\n",
+      "[0, 1,    0],\n",
+      "[0, 0, 1000]]), Matrix([\n",
+      "[1, 2,       0],\n",
+      "[0, 1,       0],\n",
+      "[0, 0, 1000000]]), Matrix([\n",
+      "[1, 3,          0],\n",
+      "[0, 1,          0],\n",
+      "[0, 0, 1000000000]]), Matrix([\n",
+      "[1, 4,             0],\n",
+      "[0, 1,             0],\n",
+      "[0, 0, 1000000000000]]), Matrix([\n",
+      "[1, 5,                0],\n",
+      "[0, 1,                0],\n",
+      "[0, 0, 1000000000000000]]), Matrix([\n",
+      "[1, 6,                   0],\n",
+      "[0, 1,                   0],\n",
+      "[0, 0, 1000000000000000000]]), Matrix([\n",
+      "[1, 7,                      0],\n",
+      "[0, 1,                      0],\n",
+      "[0, 0, 1000000000000000000000]]), Matrix([\n",
+      "[1, 8,                         0],\n",
+      "[0, 1,                         0],\n",
+      "[0, 0, 1000000000000000000000000]]), Matrix([\n",
+      "[1, 9,                            0],\n",
+      "[0, 1,                            0],\n",
+      "[0, 0, 1000000000000000000000000000]]), Matrix([\n",
+      "[1, 10,                               0],\n",
+      "[0,  1,                               0],\n",
+      "[0,  0, 1000000000000000000000000000000]]), Matrix([\n",
+      "[1, 11,                                  0],\n",
+      "[0,  1,                                  0],\n",
+      "[0,  0, 1000000000000000000000000000000000]]), Matrix([\n",
+      "[1, 12,                                     0],\n",
+      "[0,  1,                                     0],\n",
+      "[0,  0, 1000000000000000000000000000000000000]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([J**i for i in range(1,13)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выглядит намного прощеитоговую форму через ЖНФ с $J=J(n)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
