--- a/Task2/Task2.ipynb
+++ b/Task2/Task2.ipynb
@@ -25,41 +25,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Решение\n",
-    "Можем найти [ЖНФ](https://en.wikipedia.org/wiki/Jordan_normal_form), чтобы снизить число ненулевых множителей, таким образом уменьшив число операций для больших $n$.\n",
-    "$$\n",
-    "A^n = C J^n C^{-1}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.157706201000025\n",
-      "2.832353502999979\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sympy\n",
-    "import time\n",
-    "A = sympy.Matrix([(1,0,0),(1,1,0),(0,-1,1000)])\n",
-    "C, J = A.jordan_form()\n",
-    "zeros = sympy.zeros(3)\n",
-    "start = time.process_time()\n",
-    "x = [C*J**i*C**(-1) for i in range(1,1000)]\n",
-    "jtime = time.process_time() - start\n",
-    "print(jtime)\n",
-    "x = [A ** i for i in range(1,1000)]\n",
-    "print(time.process_time() - jtime - start)"
+    "# Решение"
    ]
   },
   {
@@ -71,122 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Matrix([\n",
-      "[1,  0,    0],\n",
-      "[1,  1,    0],\n",
-      "[0, -1, 1000]]), Matrix([\n",
-      "[ 1,     0,       0],\n",
-      "[ 2,     1,       0],\n",
-      "[-1, -1001, 1000000]]), Matrix([\n",
-      "[    1,        0,          0],\n",
-      "[    3,        1,          0],\n",
-      "[-1002, -1001001, 1000000000]]), Matrix([\n",
-      "[       1,           0,             0],\n",
-      "[       4,           1,             0],\n",
-      "[-1002003, -1001001001, 1000000000000]]), Matrix([\n",
-      "[          1,              0,                0],\n",
-      "[          5,              1,                0],\n",
-      "[-1002003004, -1001001001001, 1000000000000000]]), Matrix([\n",
-      "[             1,                 0,                   0],\n",
-      "[             6,                 1,                   0],\n",
-      "[-1002003004005, -1001001001001001, 1000000000000000000]]), Matrix([\n",
-      "[                1,                    0,                      0],\n",
-      "[                7,                    1,                      0],\n",
-      "[-1002003004005006, -1001001001001001001, 1000000000000000000000]]), Matrix([\n",
-      "[                   1,                       0,                         0],\n",
-      "[                   8,                       1,                         0],\n",
-      "[-1002003004005006007, -1001001001001001001001, 1000000000000000000000000]]), Matrix([\n",
-      "[                      1,                          0,                            0],\n",
-      "[                      9,                          1,                            0],\n",
-      "[-1002003004005006007008, -1001001001001001001001001, 1000000000000000000000000000]]), Matrix([\n",
-      "[                         1,                             0,                               0],\n",
-      "[                        10,                             1,                               0],\n",
-      "[-1002003004005006007008009, -1001001001001001001001001001, 1000000000000000000000000000000]]), Matrix([\n",
-      "[                            1,                                0,                                  0],\n",
-      "[                           11,                                1,                                  0],\n",
-      "[-1002003004005006007008009010, -1001001001001001001001001001001, 1000000000000000000000000000000000]]), Matrix([\n",
-      "[                               1,                                   0,                                     0],\n",
-      "[                              12,                                   1,                                     0],\n",
-      "[-1002003004005006007008009010011, -1001001001001001001001001001001001, 1000000000000000000000000000000000000]])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x[:12])"
+    "import sympy\n",
+    "\n",
+    "A = sympy.Matrix([(1, 0, 0), (1, 1, 0), (0, -1, 1000)])\n",
+    "print([C * J ** i * C ** (-1) for i in range(1, 12)])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Обнаружить здесь закономерность несложно, но для первых двух элементов последней строки лаконично (без суммирования от 1 до $n$) записать не получится. Посмотрим, как выглядит $J$ и как можно сократить запись с его помощью:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Matrix([\n",
-      "[1, 1,    0],\n",
-      "[0, 1,    0],\n",
-      "[0, 0, 1000]]), Matrix([\n",
-      "[1, 2,       0],\n",
-      "[0, 1,       0],\n",
-      "[0, 0, 1000000]]), Matrix([\n",
-      "[1, 3,          0],\n",
-      "[0, 1,          0],\n",
-      "[0, 0, 1000000000]]), Matrix([\n",
-      "[1, 4,             0],\n",
-      "[0, 1,             0],\n",
-      "[0, 0, 1000000000000]]), Matrix([\n",
-      "[1, 5,                0],\n",
-      "[0, 1,                0],\n",
-      "[0, 0, 1000000000000000]]), Matrix([\n",
-      "[1, 6,                   0],\n",
-      "[0, 1,                   0],\n",
-      "[0, 0, 1000000000000000000]]), Matrix([\n",
-      "[1, 7,                      0],\n",
-      "[0, 1,                      0],\n",
-      "[0, 0, 1000000000000000000000]]), Matrix([\n",
-      "[1, 8,                         0],\n",
-      "[0, 1,                         0],\n",
-      "[0, 0, 1000000000000000000000000]]), Matrix([\n",
-      "[1, 9,                            0],\n",
-      "[0, 1,                            0],\n",
-      "[0, 0, 1000000000000000000000000000]]), Matrix([\n",
-      "[1, 10,                               0],\n",
-      "[0,  1,                               0],\n",
-      "[0,  0, 1000000000000000000000000000000]]), Matrix([\n",
-      "[1, 11,                                  0],\n",
-      "[0,  1,                                  0],\n",
-      "[0,  0, 1000000000000000000000000000000000]]), Matrix([\n",
-      "[1, 12,                                     0],\n",
-      "[0,  1,                                     0],\n",
-      "[0,  0, 1000000000000000000000000000000000000]])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print([J**i for i in range(1,13)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Выглядит намного прощеитоговую форму через ЖНФ с $J=J(n)$"
+    "Обнаружить здесь закономерность несложно, но для первых двух элементов последней строки запись будет не слишком лаконичной.\n",
+    "Можем найти [ЖНФ](https://en.wikipedia.org/wiki/Jordan_normal_form) и воспользоваться её свойством:\n",
+    "$$\n",
+    "A^n = C J^n C^{-1}\n",
+    "$$\n",
+    "Посмотрим, как выглядит $J$ в различных степенях и как можно сократить запись с его помощью:"
    ]
   },
   {
@@ -194,7 +68,116 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "C, J = A.jordan_form()\n",
+    "print([J ** i for i in range(1, 13)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выглядит намного проще. Значит, матрицу в произвольной степени можно найти с помощью $J^n=J(n)$:\n",
+    "$$\n",
+    "A^n = C J^n C^{-1}, \\space где \\\\\n",
+    "J^n = \\begin{pmatrix}\n",
+    "1 & n & 0\\\\\n",
+    "0 & 1 & 0\\\\\n",
+    "0 & 0 & 1000^n\\\\\n",
+    "\\end{pmatrix},\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"C = \", C, \"C^-1 = \", C ** -1, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Проверим быстродействие:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "\n",
+    "def j_power(n):\n",
+    "    return sympy.Matrix([[1, n, 0], [0, 1, 0], [0, 0, 1000 ** n]])\n",
+    "\n",
+    "\n",
+    "C_inv = C ** (-1)\n",
+    "max_power = 1000\n",
+    "test_range = range(1, max_power + 1)\n",
+    "init_stamp = time.process_time()\n",
+    "direct_powers = [A ** n for n in test_range]\n",
+    "direct_stamp = time.process_time()\n",
+    "jnf_powers = [C * J ** n * C_inv for n in test_range]\n",
+    "jnf_stamp = time.process_time()\n",
+    "alt_jnf = [C * j_power(n) * C_inv for n in test_range]\n",
+    "alt_stamp = time.process_time()\n",
+    "print(\"direct powers: \", direct_stamp - init_stamp)\n",
+    "print(\"simple jnf:    \", jnf_stamp - direct_stamp)\n",
+    "print(\"alt jnf:       \", alt_stamp - jnf_stamp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Что упущено? Проверка на соответствие результата эмпирической закономерности простому возведению в степень. Предположим, что степень выше `max_power` нам не интересна:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(alt_jnf == jnf_powers == direct_powers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ответ\n",
+    "Напишем функцию, возвращающую $A^n$: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def A_power(n):\n",
+    "    assert not (n < 1 or n - int(n)), \"only natural powers allowed\"\n",
+    "    return C * j_power(n) * C_inv\n",
+    "\n",
+    "\n",
+    "for n in [1, 20, 1.4]:  # check\n",
+    "    print(A_power(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Post scriptum\n",
+    "Конечно, найти $J(n)$ можно было найти аналитически, но в этом случае мы сэкономили время и не прогадали :) "
+   ]
   }
  ],
  "metadata": {
