--- a/Task3/Task3.ipynb
+++ b/Task3/Task3.ipynb
@@ -34,9 +34,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:3dml-hr]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-3dml-hr-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -48,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
