T3: micro assert improvement

--- a/Task2/Task2.ipynb
+++ b/Task2/Task2.ipynb
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "def A_power(n):\n",
-    "    assert not (n < 1 or n - int(n)), \"only natural powers allowed\"\n",
+    "    assert not (n < 1 or n - int(n)), f\"only natural powers allowed, not {n}\"\n",
     "    return C * j_power(n) * C_inv\n",
     "\n",
     "\n",
