T3: load, train, test scripts

--- a/Task3/Task3.ipynb
+++ b/Task3/Task3.ipynb
@@ -25,6 +25,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Решение"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Возьмём один из [наиболее известных](https://paperswithcode.com/task/3d-object-classification) методов классификаций трёхмерных объектов - [MeshCNN](https://github.com/ranahanocka/MeshCNN) - обучим его и оценим качество на соответствующих подвыборках. \n",
+    "\n",
+    "Прежде всего, загрузим набор примитивов:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./scripts/get_data.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Запустим обучение. Большинство параметров взяты из `MeshCNN/scripts/shrec/train.sh`, исключения:\n",
+    "- `ninput_edges` увеличен с запасом, потому что есть примитивы с большим числом граней, чем в SHREC. Пример: тор.\n",
+    "- по той же причине увеличен `pool_res`\n",
+    "- `niter` и `niter_decay` снижены со 100 и 500 до 25 и 15 соответственно, потому что 100% точность на `test` достигается уже на 11-й эпохе, функция потерь достигает нуля на 32-й эпохе\n",
+    "- `print_freq` (который стоило бы назвать `print_period` или `iters_per_print`) увеличен впятеро для услады глаз и колёсика мыши"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./scripts/train.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./scripts/test.sh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -48,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
