--- a/Task3/Task3.ipynb
+++ b/Task3/Task3.ipynb
@@ -42,9 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1xM5diKjMbp_PfNu--JG2A-ZeFk9TLkks\n",
+      "To: /media/sergiev/painkiller/misc/test-tasks-3dml/Task3/dataset-v2.zip\n",
+      "10.4MB [00:00, 51.4MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "!./scripts/get_data.sh"
    ]
@@ -54,9 +65,9 @@
    "metadata": {},
    "source": [
     "Запустим обучение. Большинство параметров взяты из `MeshCNN/scripts/shrec/train.sh`, исключения:\n",
-    "- `ninput_edges` увеличен с запасом, потому что есть примитивы с большим числом граней, чем в SHREC. Пример: тор.\n",
+    "- `ninput_edges` увеличен с запасом, потому что есть примитивы с большим числом граней, чем в SHREC. Пример: тор (`torus`).\n",
     "- по той же причине увеличен `pool_res`\n",
-    "- `niter` и `niter_decay` снижены со 100 и 500 до 25 и 15 соответственно, потому что 100% точность на `test` достигается уже на 11-й эпохе, функция потерь достигает нуля на 32-й эпохе\n",
+    "- `niter` и `niter_decay` снижены со 100 и 500 до 15 и 10 соответственно, потому что 100% точность на `test` чаще всего (`seed` не фиксирован) достигается к 15-й эпохе\n",
     "- `print_freq` (который стоило бы назвать `print_period` или `iters_per_print`) увеличен впятеро для услады глаз и колёсика мыши"
    ]
   },
@@ -70,20 +81,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!./scripts/test.sh"
+    "Также вместо обучения с нуля можно воспользоваться моделью с \"готовыми\" весами, полученными с помощью скрипта из предыдущей клетки:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1YbGrSbcanFTKFbIaH-kKDcaqXy4JdNeG\n",
+      "To: /media/sergiev/painkiller/misc/test-tasks-3dml/Task3/latest_net.pth\n",
+      "5.30MB [00:00, 39.1MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./scripts/get_pretrained.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оценим точность на `test` и `valid`. К сожалению, `MeshCNN` не является пакетом и эта проблема не решается добавлением инит-файла в его корень - при попытке взаимодействовать с его функциями \"снаружи\" (из клеток Jupyter), мы довольно быстро упираемся в отсутствие части модулей в поле зрения интерпретатора. Другими словами, взаимодействовать со всеми частями `MeshCNN` проще всего python-скриптами, расположенными в его корне. Поэтому `estimate.sh` копирует `sklearn_test.py` в `MeshCNN` и вызывает эту копию."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing mean std from train data...\n",
+      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  val = np.asanyarray(val)\n",
+      "0 of 600\n",
+      "500 of 600\n",
+      "saved:  primitives/mean_std_cache.p\n",
+      "loaded mean / std from cache\n",
+      "loading the model from ./checkpoints/primitives/latest_net.pth\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        cone       1.00      1.00      1.00       100\n",
+      "        cube       1.00      1.00      1.00       100\n",
+      "    cylinder       1.00      1.00      1.00       100\n",
+      "       plane       1.00      1.00      1.00       100\n",
+      "       torus       1.00      1.00      1.00       100\n",
+      "   uv_sphere       1.00      1.00      1.00       100\n",
+      "\n",
+      "    accuracy                           1.00       600\n",
+      "   macro avg       1.00      1.00      1.00       600\n",
+      "weighted avg       1.00      1.00      1.00       600\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./scripts/estimate.sh test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded mean / std from cache\n",
+      "loading the model from ./checkpoints/primitives/latest_net.pth\n",
+      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  val = np.asanyarray(val)\n",
+      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  val = np.asanyarray(val)\n",
+      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  val = np.asanyarray(val)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        cone       1.00      1.00      1.00        50\n",
+      "        cube       1.00      1.00      1.00        50\n",
+      "    cylinder       1.00      1.00      1.00        50\n",
+      "       plane       1.00      1.00      1.00        50\n",
+      "       torus       1.00      1.00      1.00        50\n",
+      "   uv_sphere       1.00      1.00      1.00        50\n",
+      "\n",
+      "    accuracy                           1.00       300\n",
+      "   macro avg       1.00      1.00      1.00       300\n",
+      "weighted avg       1.00      1.00      1.00       300\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./scripts/estimate.sh valid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Наблюдается успешное обобщение модели на `valid`. Так как наилучший в смысле точности результат уже достигнут, дальнейшие улучшения модели могут включать себя лишь меры по повышению производительности: например, эксперименты с уменьшением числа слоёв или фильтров свёртки в отдельных слоях."
+   ]
   }
  ],
  "metadata": {
