--- a/Task4/Task4.ipynb
+++ b/Task4/Task4.ipynb
@@ -50,9 +50,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:3dml-hr]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-3dml-hr-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
