T3-4: meshcnn as directory, not submodule

--- a/Task3/Task3.ipynb
+++ b/Task3/Task3.ipynb
@@ -28,16 +28,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Решение"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Предупреждение\n",
+    "\n",
+    "Решение данного задания использует shell-скрипты - для воспроизведения примеров рекомендую использовать нативный Linux (например, [Ubuntu 20.04](https://ubuntu.com/download/desktop)) или [WSL](https://docs.microsoft.com/ru-ru/windows/wsl/install-win10).\n",
+    "\n",
+    "# Решение\n",
+    "\n",
     "Возьмём один из [наиболее известных](https://paperswithcode.com/task/3d-object-classification) методов классификаций трёхмерных объектов - [MeshCNN](https://github.com/ranahanocka/MeshCNN) - обучим его и оценим качество на соответствующих подвыборках. \n",
     "\n",
-    "Прежде всего, загрузим набор примитивов:"
+    "Прежде всего, загрузим набор примитивов **(перед запуском следующей клетки убедитесь, что у вас установлен `unzip`)**:"
    ]
   },
   {
@@ -51,8 +50,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1xM5diKjMbp_PfNu--JG2A-ZeFk9TLkks\n",
-      "To: /media/sergiev/painkiller/misc/test-tasks-3dml/Task3/dataset-v2.zip\n",
-      "10.4MB [00:00, 51.4MB/s]\n"
+      "To: /mnt/c/Users/semyo/PycharmProjects/test-tasks-3dml/Task3/dataset-v2.zip\n",
+      "10.4MB [00:01, 9.39MB/s]\n"
      ]
     }
    ],
@@ -68,7 +67,9 @@
     "- `ninput_edges` увеличен с запасом, потому что есть примитивы с большим числом граней, чем в SHREC. Пример: тор (`torus`).\n",
     "- по той же причине увеличен `pool_res`\n",
     "- `niter` и `niter_decay` снижены со 100 и 500 до 15 и 10 соответственно, потому что 100% точность на `test` чаще всего (`seed` не фиксирован) достигается к 15-й эпохе\n",
-    "- `print_freq` (который стоило бы назвать `print_period` или `iters_per_print`) увеличен впятеро для услады глаз и колёсика мыши"
+    "- `print_freq` (который стоило бы назвать `print_period` или `iters_per_print`) увеличен впятеро для услады глаз и колёсика мыши\n",
+    "\n",
+    "*Перед запуском обучения убедитесь, что ваше устройство поддерживает CUDA и что необходимые nvidia-драйвера установлены. Если вы не собираетесь задействовать GPU, можете пропустить следующую клетку - все остальные скрипты GPU не требуют*"
    ]
   },
   {
@@ -98,8 +99,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1YbGrSbcanFTKFbIaH-kKDcaqXy4JdNeG\n",
-      "To: /media/sergiev/painkiller/misc/test-tasks-3dml/Task3/latest_net.pth\n",
-      "5.30MB [00:00, 39.1MB/s]\n"
+      "To: /mnt/c/Users/semyo/PycharmProjects/test-tasks-3dml/Task3/latest_net.pth\n",
+      "5.30MB [00:00, 7.81MB/s]\n"
      ]
     }
    ],
@@ -111,26 +112,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Оценим точность на `test` и `valid`. К сожалению, `MeshCNN` не является пакетом и эта проблема не решается добавлением инит-файла в его корень - при попытке взаимодействовать с его функциями \"снаружи\" (из клеток Jupyter), мы довольно быстро упираемся в отсутствие части модулей в поле зрения интерпретатора. Другими словами, взаимодействовать со всеми частями `MeshCNN` проще всего python-скриптами, расположенными в его корне. Поэтому `estimate.sh` копирует `sklearn_test.py` в `MeshCNN` и вызывает эту копию."
+    "Оценим точность на `test` и `valid`. Скрипт вызывает `MeshCNN/sklearn_test.py`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing mean std from train data...\n",
-      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  val = np.asanyarray(val)\n",
-      "0 of 600\n",
-      "500 of 600\n",
-      "saved:  primitives/mean_std_cache.p\n",
       "loaded mean / std from cache\n",
-      "loading the model from ./checkpoints/primitives/latest_net.pth\n",
+      "loading the model from ../MeshCNN/checkpoints/primitives/latest_net.pth\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "        cone       1.00      1.00      1.00       100\n",
@@ -153,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +156,7 @@
      "output_type": "stream",
      "text": [
       "loaded mean / std from cache\n",
-      "loading the model from ./checkpoints/primitives/latest_net.pth\n",
-      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  val = np.asanyarray(val)\n",
-      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  val = np.asanyarray(val)\n",
-      "/home/sergiev/anaconda3/envs/py39/lib/python3.9/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  val = np.asanyarray(val)\n",
+      "loading the model from ../MeshCNN/checkpoints/primitives/latest_net.pth\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "        cone       1.00      1.00      1.00        50\n",
@@ -212,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
