--- a/Task4/Task4.ipynb
+++ b/Task4/Task4.ipynb
@@ -45,7 +45,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!./scripts/run.sh"
+   ]
   }
  ],
  "metadata": {
