--- a/Task4/Task4.ipynb
+++ b/Task4/Task4.ipynb
@@ -41,18 +41,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "!./scripts/run.sh"
+    "# Решение (инструкция)\n",
+    "\n",
+    "### 0. Скачивание датасета и предобученной модели\n",
+    "Выделено в отдельный этап, так как может быть выполнено в рамках проверки третьего задания.\n",
+    "```shell\n",
+    "source ../Task3/scripts/get_data.sh\n",
+    "source ../Task3/scripts/get_pretrained.sh\n",
+    "```\n",
+    "\n",
+    "### 1. Сборка и запуск приложения\n",
+    "```shell\n",
+    "cd ../MeshCNN\n",
+    "docker build -t 3dml-sergiev .\n",
+    "docker run --publish 8866:8866 3dml-sergiev\n",
+    "```\n",
+    "\n",
+    "### 2. Запущенное приложение доступно по адресу [localhost:8866](http://localhost:8866/)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
